feat: implemented expenses list
