# api/router/expense-plan-record.go
@@ -1,0 +1,11 @@
+package router
+
+import (
+	"net/http"
+
+	"github.com/celso-alexandre/api/handler"
+)
+
+func ExpensePlanRecordSetupRoutes(mux *http.ServeMux) {
+	mux.HandleFunc("/expense-plan-record/list", handler.ListExpensePlanRecord)
+}
